<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textAllCaps="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
