...
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            />
...
